tests/machine/x/scala/group_by_sort.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_sort.scala:3: error: illegal start of simple expression
  val grouped = (((for { i <- items } yield (i("cat"), (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).sortBy(g => -for { x <- g } yield x.val.sum)).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("cat" -> (g._1), "total" -> (for { x <- g } yield x.val.sum)) } }.toList
                                                                                                                                           ^
/workspace/mochi/tests/machine/x/scala/group_by_sort.scala:7: error: ')' expected but '}' found.
}
^
two errors found
